--- a/app/src/main/res/layout/activity_mission_history.xml
+++ b/app/src/main/res/layout/activity_mission_history.xml
@@ -13,7 +13,8 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/mission_history">
+        android:id="@+id/mission_history"
+        android:background="@color/cardview_light_background">
 
     </android.support.v7.widget.RecyclerView>
 
